apps/kapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kapi
    process: web
  name: kapi-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kapi
      process: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kapi
        process: web
    spec:
      containers:
      - env:
        - name: PORT
          value: "3000"
        image: ghcr.io/sandersch/kapi:master
        imagePullPolicy: Always
        name: main
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
