apps/kapi/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kapi
    process: web
  name: kapi-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kapi
      process: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kapi
        process: web
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
      - env:
        - name: PORT
          value: "3000"
