apps/kapi/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: kapi
spec:
  ports:
  - protocol: TCP
    port: 5432
  selector:
    app.kubernetes.io/name: kapi
    process: postgres
  type: ClusterIP
